Ta bort posteringSats og bruk bare dagsats fra vedtaket
